...
    <string name="my_goals">My Learning Goals</string>
    <string name="view">view:</string>
    <string name="select_type">Select activity type:</string>
    <string name="select_topic">Select topic: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">PROGRESS</string>
    <string name="goals">GOALS</string>
    <string name="dictionary">DICTIONARY</string>
    <string name="home">HOME</string>
    <string name="study">STUDY</string>
    <string name="want_to">I want to complete: </string>
    <string name="search">search</string>
    <string name="activities">activities</string>
    <string name="what_activity">What type of activity do you want to focus on?</string>

    //LINKS
...
    <string name="check_level">check your level here</string>
    <string name="back_to_app">back to app</string>
    <string name="information">information</string>


    //BUTTONS
    <string name="a1_level">BEGINNER: A1</string>
    <string name="a2_level">PRE-INTERMEDIATE: A2</string>
    <string name="b1_level">INTERMEDIATE: B1</string>
    <string name="b2_level">UPPER INTERMEDIATE: B2</string>
    <string name="c1_level">ADVANCED: C1</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="c1">C1</string>
    <string name="all">ALL</string>
    <string name="grammar">GRAMMAR</string>
    <string name="vocab">VOCABULARY</string>
    <string name="reading">READING</string>
    <string name="further_explanation">FURTHER EXPLANATION</string>
    <string name="activities_caps">ACTIVITIES</string>
    <string name="revision_act">REVISION ACTIVITY</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="check">CHECK ANSWER</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="update">UPDATE</string>
    <string name="revision">REVISION</string>



</resources>
