...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/banner_outline"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/banner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/yellow_button_outline_bg">

            <ImageView
                android:id="@+id/image_view_goal"
...
                android:src="@drawable/goals_colour2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_current_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/blue_app"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toEndOf="@+id/image_view_goal"
                app:layout_constraintTop_toBottomOf="@+id/text_view_daily_goals" />

            <TextView
                android:id="@+id/text_view_daily_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_outline" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="3"
        android:textColor="#2196F3"
...
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button_weekly"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/blue_button_bg"
        android:text="@string/weekly"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_daily"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="152dp"
        android:text="@string/update"
        app:backgroundTintMode="add"
...
